traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:42: error: '=' expected but '.' found.
def change.OUEST(){
          ^Snake:48: error: illegal start of simple expression
}
^